--- a/src/app/search-select-mat-input/search-mat-input/search-mat-input.component.html
+++ b/src/app/search-select-mat-input/search-mat-input/search-mat-input.component.html
@@ -7,7 +7,7 @@
       type="text"
       [placeholder]="filterLabel"
       (keydown)="handleKeydown($event)"
-      (keyup)="handleKeyup($event)"
+      (keyup)="handleKeyup()"
     />
   </div>
 </form>
