--- a/src/app/search-select-mat-input/search-select-mat-input.component.html
+++ b/src/app/search-select-mat-input/search-select-mat-input.component.html
@@ -21,7 +21,7 @@
         [value]="selectAllOptionValue"
         >{{ selectAllLabel }}</mat-option
       >
-      <mat-option *ngFor="let d of data" [value]="d" (click)="doSelectAny()">
+      <mat-option *ngFor="let d of data" [value]="d">
         {{ d.name }}
       </mat-option>
     </mat-select>
